[gd_scene load_steps=64 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PlayerCamera.gd" type="Script" id=3]
[ext_resource path="res://Assets/Hand Sprite Sheet.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Hand.gd" type="Script" id=5]
[ext_resource path="res://Assets/Protag Sprite Sheet(3).png" type="Texture" id=6]
[ext_resource path="res://Scripts/HitBox.gd" type="Script" id=7]
[ext_resource path="res://Assets/Protag Sprite Sheet (new).png" type="Texture" id=8]
[ext_resource path="res://Shaders/FlashShader.gdshader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=80]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 1000, 8000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 2000, 8000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 3000, 8000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 0, 9000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 1000, 9000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 2000, 9000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 8 )
region = Rect2( 1000, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 8 )
region = Rect2( 2000, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 8 )
region = Rect2( 3000, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 8 )
region = Rect2( 0, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 8 )
region = Rect2( 1000, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 8 )
region = Rect2( 2000, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 8 )
region = Rect2( 3000, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 8 )
region = Rect2( 0, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 8 )
region = Rect2( 1000, 2000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 8 )
region = Rect2( 2000, 2000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 8 )
region = Rect2( 3000, 2000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 8 )
region = Rect2( 0, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 8 )
region = Rect2( 1000, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 8 )
region = Rect2( 2000, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 8 )
region = Rect2( 3000, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 8 )
region = Rect2( 0, 4000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 8 )
region = Rect2( 1000, 4000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 8 )
region = Rect2( 2000, 4000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 8 )
region = Rect2( 3000, 4000, 1000, 1000 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "Falling",
"speed": 24.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ SubResource( 101 ) ],
"loop": false,
"name": "Jump",
"speed": 24.0
}, {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ) ],
"loop": true,
"name": "Running",
"speed": 24.0
} ]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 2000, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 3000, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 0, 4000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 1000, 4000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 2000, 4000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 3000, 4000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 0, 5000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 1000, 5000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 2000, 5000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 3000, 5000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 1000, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 2000, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 3000, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 0, 2000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 1000, 2000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 2000, 2000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 3000, 2000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 0, 3000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 1000, 3000, 1000, 1000 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": false,
"name": "Catch",
"speed": 24.0
}, {
"frames": [ SubResource( 67 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "Throw",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 35.0223

[sub_resource type="Animation" id=77]
resource_name = "Damage"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:material:shader_param/flash_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, -0.5, -0.5 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:material:shader_param/flash_modifier")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 0.00232267, 1 ),
"update": 0,
"values": [ 0.6, 0.0, 0.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../PlayerHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=79]
resource_name = "Off"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../PlayerHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=78]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../PlayerHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 18.0
height = 80.0

[sub_resource type="RectangleShape2D" id=81]
extents = Vector2( 15.5, 59.5 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
material = SubResource( 80 )
collision_mask = 8
script = ExtResource( 2 )
Speed = 700
JumpForce = -1150
FallGravity = 5000
JumpStopMul = 0.4
friction = 0.2
acceleration = 0.15

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 41 )
animation = "Running"

[node name="Hand" type="Position2D" parent="PlayerSprite"]
scale = Vector2( 6.66667, 6.66667 )
script = ExtResource( 5 )

[node name="HandSprite" type="AnimatedSprite" parent="PlayerSprite/Hand"]
position = Vector2( 85, 0 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 66 )
animation = "Idle"
playing = true

[node name="HandHitBox" type="Area2D" parent="PlayerSprite/Hand/HandSprite" groups=["PlayerHand"]]
position = Vector2( 0, 10 )
scale = Vector2( 8, 8 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/Hand/HandSprite/HandHitBox"]
shape = SubResource( 8 )

[node name="CatchHitBox" type="Area2D" parent="PlayerSprite/Hand/HandSprite" groups=["Catch"]]
position = Vector2( 0, 10 )
scale = Vector2( 8, 8 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/Hand/HandSprite/CatchHitBox"]
modulate = Color( 0.00784314, 0.976471, 0, 1 )
shape = SubResource( 8 )
disabled = true

[node name="RealHandPos" type="Position2D" parent="PlayerSprite/Hand"]
position = Vector2( 85, 0 )

[node name="HandBackPos" type="Position2D" parent="PlayerSprite/Hand"]
position = Vector2( -85, 0 )

[node name="Camera2D" type="Camera2D" parent="PlayerSprite"]
position = Vector2( 864.706, 6.10352e-05 )
scale = Vector2( 6.66667, 6.66667 )
current = true
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.7
drag_margin_right = 0.1
drag_margin_bottom = 0.0
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="PlayerEffects" type="AnimationPlayer" parent="PlayerSprite"]
anims/Damage = SubResource( 77 )
anims/Off = SubResource( 79 )
anims/RESET = SubResource( 78 )

[node name="PlayerHitBox" type="Area2D" parent="." groups=["Player"]]
collision_mask = 20
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
modulate = Color( 0, 1, 0.180392, 1 )
position = Vector2( 0, 4 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 1, 0.858824, 1 )
position = Vector2( -0.5, 2.5 )
shape = SubResource( 81 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBuffring" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CatchTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackRate" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TakingDamage" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="Grounded_Update" from="." to="PlayerSprite/Camera2D" method="_on_Player_Grounded_Update"]
[connection signal="animation_finished" from="PlayerSprite/Hand/HandSprite" to="." method="_on_HandSprite_animation_finished"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="JumpBuffring" to="." method="_on_JumpBuffring_timeout"]
[connection signal="timeout" from="CatchTimer" to="." method="_on_CatchTimer_timeout"]
[connection signal="timeout" from="AttackRate" to="." method="_on_AttackRate_timeout"]
[connection signal="timeout" from="TakingDamage" to="." method="_on_TakingDamage_timeout"]
